chrome/bar/findbar.css
/* Based on: <https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/floating_findbar_on_top.css> */
/* findbar as floating box at the top with auto-hide
 * N.B: privacy.resistFingerprinting.letterboxing prevents this from working properly
 */

findbar {
  order: -1;
  margin-bottom: -32px;
  position: relative;
  border-top: none !important;
  padding: 0 !important;
  transition:
    transform 200ms ease-in-out,
    opacity 200ms ease-in-out !important;
  background: none !important;
  pointer-events: none;
  z-index: 1;
  white-space: nowrap;
}

/* Auto-hide findbar after Ns when unfocused */
/*
findbar:not(:focus-within) {
  opacity: 0 !important;
  margin-top: -100px !important;
  transition:
    opacity 0.8s ease-in-out 5s,
    margin-top 0.8s ease-in-out 5s !important;
}
*/

.findbar-container > .findbar-find-fast {
  padding: var(--toolbarbutton-inner-padding) 1px;
  margin: 0 !important;
}

findbar[hidden] {
  transform: translateY(-30px);
}

findbar > .findbar-container,
findbar > .close-icon {
  border: 1px solid var(--chrome-content-separator-color);
  border-width: 0 0 1px 0px;
  background-color: var(--lwt-accent-color) !important;
  background-image: linear-gradient(
      var(--toolbar-bgcolor),
      var(--toolbar-bgcolor)
    ),
    var(--lwt-header-image, none);
  pointer-events: auto;
}

findbar > .findbar-container {
  border-bottom-right-radius: 4px;
  border-right-width: 1px;
  height: initial !important;
  margin-inline: 0px !important;
  overflow-inline: visible !important;
}

.findbar-find-status {
  display: flex;
  overflow: hidden;
  text-overflow: ellipsis;
  flex-grow: 1;
}

.findbar-closebutton {
  margin: 0 !important;
  border-radius: 0 !important;
  padding: 5px !important;
  width: initial !important;
  order: -1;
}
.findbar-closebutton > image {
  padding: 3px;
}
.findbar-closebutton:hover > image {
  background: var(--toolbarbutton-hover-background) !important;
  border-radius: 4px;
}
findbar > .findbar-container > hbox {
  margin: 0 5px;
}

findbar::after {
  content: "";
  display: flex;
  flex-grow: 100;
}

findbar {
  flex-direction: row-reverse;
}
findbar > .findbar-container {
  flex-direction: row-reverse;
  border-inline-width: 1px 0px;
  border-bottom-right-radius: 0px;
  border-bottom-left-radius: 4px;
}
findbar {
  margin-right: 650px;
  border-right: 1px solid var(--chrome-content-separator-color);
}

